:bug: GraphCanvas overflow

--- a/app/assets/styles/globals/graphCanvas.styl
+++ b/app/assets/styles/globals/graphCanvas.styl
@@ -9,7 +9,7 @@
     width 100vw
     height 100vh
     background yellow
-    display flex
+    overflow hidden
 
 .graph__text
     position absolute
@@ -25,6 +25,8 @@
     width 100%
     height 100%
 
+    user-select none
+
 .graph__discover
     width 80%
     height auto
@@ -32,7 +34,8 @@
     left 50%
     top 50%
     mix-blend-mode exclusion
-
+    
+    user-select none
     transform translateX(-50%) translateY(-50%)
 
 .graph__discoverBlend
